force-app/main/default/objects/Movie__c/fields/Picture__c.field-meta.xml
<CustomField>
    <fullName>Picture__c</fullName>
    <label>Picture</label>
    <length>250</length>
    <type>Text</type>
</CustomField>