force-app/main/default/objects/Movie__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Horror</fullName>
            </value>
            <value>
                <fullName>Adventure</fullName>
            </value>
            <value>
                <fullName>Action</fullName>
            </value>
            <value>
                <fullName>Drama</fullName>
            </value>
            <value>
                <fullName>Comedy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>